# pre-commit-nbconvert

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
pre_commit_nbconvert/: clear_outputs.py  convert.py  utils.py
reports/: notebook.html  notebook.md
tests/: notebook.ipynb  notebook_clear.ipynb  test_clear_outputs.py
